--- a/Assets/css/Style.css
+++ b/Assets/css/Style.css
@@ -1,3 +1,53 @@
 #time{
-display: none
-}
+    display: none;
+    margin-left:300px;
+    margin-bottom:150px;
+    color: rgb(202, 19, 19);
+    
+    
+    
+    }
+    .questions{
+    display: none;
+    margin-left:300px;
+    margin-bottom:700px;
+    padding-bottom: 400px;
+    
+    
+    
+    }
+    .results{
+    display: none
+    }
+    body{
+        background-color: beige;
+    
+    
+    }
+    h1{
+        padding-bottom: 40px;
+        margin-left: 280px;
+        margin-top:75px;
+        font-style: italic;
+        
+    }
+    .btn{
+        padding-top: 10px;
+        margin-left: 400px;
+        margin-top:10px;  
+    }
+    .results{
+        padding-top: 10px;
+        margin-left: 400px;
+        margin-top:10px; 
+    }
+    .submit{
+       margin-top:20px;  
+    }
+    .correct{
+        color: rgb(219, 17, 17)
+    }
+    .incorrect{
+        color: rgb(219, 17, 17)
+    }
+
